# multi-channel-rpi-eco-monitoring

./: .gitignore  ADVANCED_CONFIGURATION.md  ARCHITECTURE.md  CLOUD_SETUP.md  CONFIG.md  DOCS_OVERVIEW.txt  DOCUMENTATION_SUMMARY.txt  INDEX.md  LICENSE  LOG_GUIDE.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  bash_update_time.sh  check_fs_expanded.sh  clap_shutdown.py  clean_live_data.sh  config.json  eco-monitor.service  enable_system_shutdown_button.sh  ftp_upload.sh  installer.py  led_off.sh  led_on.sh  offline_time_sync.py  pyproject.toml  python_record.py  rclone_upload.sh  record.py  recorder_startup_script.sh  requirements.txt  setup.py  setup_config.py  sipeed_led_force_off.py  state_manager.py  sync_rclone_config.sh  update_time.sh  upload_mode_helper.sh
audio_sensor_scripts/: asound.state
docs/: CLARIFICATION_SUMMARY.md  MAARU_QUICK_REFERENCE.md  README_DOCUMENTATION.md  advanced_configuration.md  architecture.md  cloud_setup.md  config.md  index.md  log_guide.md  maaru-physical-setup.af  maaru-physical-setup.af~lock~  physical-setup.md  quickstart.md  troubleshooting.md
sensors/: Respeaker4Mic.py  Respeaker6Mic.py  Respeaker_Custom.py  Sipeed7Mic.py  UnixDevice.py  __init__.py
